# DIGIX-GlobalAIChallenge

./: .gitignore  README.md  data_prep.py  graphs.py  nn.ipynb  pyproject.toml  smote.py
digix/: 414_Final_SMOTE_Exploration.ipynb  evaluation_metric_sean_v1.py
digix/analysis/: evaluation.py  train.py
digix/analysis/nn/: model.py
digix/utility/: data.py
