[project]
name = "digix"
version = "0.1.0"
requires-python = ">= 3.10"
authors = [
    {name = "Dan Knight"},
    {name = "Sean Mulherin"},
    {name = "Justin Huang"}
]
description = "Deep learning methods for understanding soccer tracking data"
dependencies = [
    "pandas == 2.2.3",
    "torch == 2.6.0",
    "scikit-learn == 1.6.1",
    "matplotlib == 3.10.1",
    "kagglehub == 0.3.10"
]
readme = "README.md"

[project.urls]
Repository = "https://github.com/dan-knight/DIGIX-GlobalAIChallenge"

[tool.setuptools.packages.find]
where = ["digix"]

